# daofy

./: .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  DEPLOYMENT_SUMMARY.md  DOWNLOAD_MODEL.md  KNOWLEDGE_BASE_REBUILD_REPORT.md  NEXT_STEPS.md  PENDING_OPERATIONS.md  PROGRESS_FEEDBACK_GUIDE.md  README.md  README_EN.md  RELEASE_NOTES_v2026.03.15.md  _bump_version.py  _dump_experience.py  add_rev_column.py  analyze_filter.py  analyze_new_filter.py  analyze_tools.py  build_help_kb.py  build_help_kb_incremental.py  build_log.txt  check_delphi_help.py  check_delphi_path.py  check_error_filter.py  cpu_monitor_log.json  install.bat  install.ps1  install_mcp.py  mcp_async_build.py  mcp_build_project_thirdparty.py  monitor_build.py  monitor_progress.py  opencode.json  pyproject.toml  rebuild_all_kbs.py  rebuild_all_kbs_with_progress.py  rebuild_help_kb.py  release_notes.md  requirements.txt  (+7 more)
__history/: test_format.pas.20260325_150143.bak  test_format.pas.20260325_150409.bak  test_format.pas.20260325_150723.bak  test_format.pas.20260325_151123.bak  test_format.pas.20260325_151345.bak  test_format.pas.20260325_151641.bak  test_format.pas.20260325_152200.bak  test_format.pas.20260325_152855.bak
benchmarks/: check_sizes.dpr  ebp_scan.py  kb_perf.py  mapdata_v4_sim.py  run_all.py  veh_latency.dpr
config/: CODING_RULES.mdc  compilers.json  copyright.json  history.json
docs/: @AutomationLog.txt  KNOWLEDGE_BASE_INTEGRATION.md  ast-audit-engine-spec.md  async_task.md  audit_result.md  automate_test_guide.md  callgraph-daudit-roadmap.md  callgraph-enhancement-plan.md  callgraph-split-plan.md  check_environment.md  code_hosting.md  daofy_update.md  debug_guide.md  delphi_file.md  delphi_kb.md  experience-knowledge-base.md  file_tool_audit_report.md  get_coding_rules.md  layout-completeness-detection.md  manage_component.md  package.md  project.md  rtti-mcp-bridge-design.md  stacktrace-migration-plan.md  tool_help.md  uia-implementation-plan.md  uia-integration-plan.md
releases/: delphi-mcp-server-v2026.05.01.7z
scripts/: build-skills.py
src/: __version__.py  constants.py  mcp_resources.py  server.py  tool_docs.py
tests/: gen_ssh_key.ps1  rtti_comprehensive_test.dpr  rtti_sample_test.dpr  rtti_sample_test.drc  rtti_sample_test.map  run_all_tests.bat  run_all_tests.py  run_extended_tests.py  test_agent_skill_installer.py  test_attrs_minimal.dpr  test_audit_integration.py  test_code_hosting.py  (+66 more)
(+285 files in other folders)
