[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daofy-for-delphi"
version = "2026.06.22"
description = "Daofy for Delphi - MCP Server for Delphi project compilation and knowledge base query"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "吉林省左右软件开发有限公司", email = "admin@zuoyousoft.com"},
    {name = "Equilibrium Software Development Co., Ltd, Jilin"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["delphi", "mcp", "compiler", "model-context-protocol", "ai", "embarcadero"]
dependencies = [
    "mcp>=0.9.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.25",
    "lxml>=4.9.0",
    "python-docx>=0.8.11",
    "requests>=2.31.0",

    "chardet>=7.0",
    "zvec>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
embedding = [
    "numpy>=1.21.0",
    "sentence-transformers>=2.2.0",
]
watcher = [
    "watchdog>=6.0.0",
]
# 可选: OCR 图像文字识别 (PP-OCRv6, 纯 ONNX Runtime)
ocr = [
    "onnxruntime>=1.18.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.21.0",
    "pyclipper>=1.3.0",
    "shapely>=2.0.0",
]
# 可选: OCR Intel CPU 加速 (替换 onnxruntime → onnxruntime-openvino)
ocr-openvino = [
    "onnxruntime-openvino>=1.24.0",
]
# 可选: Windows UIA (UI Automation) 浏览器 DOM 操作
uia = [
    "uiautomation>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/chinawsb/daofy"
Repository = "https://github.com/chinawsb/daofy"
"Bug Tracker" = "https://github.com/chinawsb/daofy/issues"
Changelog = "https://github.com/chinawsb/daofy/blob/main/CHANGELOG.md"

[project.scripts]
daofy = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["resources/*.md", "resources/automation/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
